Revert "Comment out integration module"

--- a/pom.xml
+++ b/pom.xml
@@ -1298,7 +1298,7 @@
                 <module>features</module>
                 <module>p2-profile</module>
                 <module>distribution</module>
-                <!--<module>integration</module>-->
+                <module>integration</module>
             </modules>
         </profile>
         <profile>
@@ -1311,7 +1311,7 @@
                 <module>features</module>
                 <module>p2-profile</module>
                 <module>distribution</module>
-                <!--<module>integration</module>-->
+                <module>integration</module>
             </modules>
         </profile>
     </profiles>
