--- a/distribution/src/resources/config-tool/key-mappings.json
+++ b/distribution/src/resources/config-tool/key-mappings.json
@@ -207,6 +207,7 @@
   "transport.jms.listener:parameter.destination": "transport.jms.listener:parameter.'transport.jms.Destination'",
   "transport.jms.listener:parameter.destination_type": "transport.jms.listener:parameter.'transport.jms.DestinationType'",
   "transport.jms.listener:parameter.default_reply_destination": "transport.jms.listener:parameter.'transport.jms.DefaultReplyDestination'",
+  "transport.jms.listener:parameter.reply_destination": "transport.jms.listener:parameter.'transport.jms.ReplyDestination'",
   "transport.jms.listener:parameter.default_destination_type": "transport.jms.listener:parameter.'transport.jms.DefaultReplyDestinationType'",
   "transport.jms.listener:parameter.message_selector": "transport.jms.listener:parameter.'transport.jms.MessageSelector'",
   "transport.jms.listener:parameter.subscription_durable": "transport.jms.listener:parameter.'transport.jms.SubscriptionDurable'",
@@ -245,6 +246,7 @@
   "transport.jms.sender:parameter.destination":             "transport.jms.sender:parameter.'transport.jms.Destination'",
   "transport.jms.sender:parameter.destination_type": "transport.jms.sender:parameter.'transport.jms.DestinationType'",
   "transport.jms.sender:parameter.default_reply_destination": "transport.jms.sender:parameter.'transport.jms.DefaultReplyDestination'",
+  "transport.jms.sender:parameter.reply_destination": "transport.jms.sender:parameter.'transport.jms.ReplyDestination'",
   "transport.jms.sender:parameter.default_destination_type": "transport.jms.sender:parameter.'transport.jms.DefaultReplyDestinationType'",
   "transport.jms.sender:parameter.message_selector": "transport.jms.sender:parameter.'transport.jms.MessageSelector'",
   "transport.jms.sender:parameter.subscription_durable": "transport.jms.sender:parameter.'transport.jms.SubscriptionDurable'",
@@ -284,6 +286,7 @@
   "transport.blocking.jms.listener:parameter.destination": "transport.blocking.jms.listener:parameter.'transport.jms.Destination'",
   "transport.blocking.jms.listener:parameter.destination_type": "transport.blocking.jms.listener:parameter.'transport.jms.DestinationType'",
   "transport.blocking.jms.listener:parameter.default_reply_destination": "transport.blocking.jms.listener:parameter.'transport.jms.DefaultReplyDestination'",
+  "transport.blocking.jms.listener:parameter.reply_destination": "transport.blocking.jms.listener:parameter.'transport.jms.ReplyDestination'",
   "transport.blocking.jms.listener:parameter.default_destination_type": "transport.blocking.jms.listener:parameter.'transport.jms.DefaultReplyDestinationType'",
   "transport.blocking.jms.listener:parameter.message_selector": "transport.blocking.jms.listener:parameter.'transport.jms.MessageSelector'",
   "transport.blocking.jms.listener:parameter.subscription_durable": "transport.blocking.jms.listener:parameter.'transport.jms.SubscriptionDurable'",
@@ -322,6 +325,7 @@
   "transport.blocking.jms.sender:parameter.destination":             "transport.blocking.jms.sender:parameter.'transport.jms.Destination'",
   "transport.blocking.jms.sender:parameter.destination_type": "transport.blocking.jms.sender:parameter.'transport.jms.DestinationType'",
   "transport.blocking.jms.sender:parameter.default_reply_destination": "transport.blocking.jms.sender:parameter.'transport.jms.DefaultReplyDestination'",
+  "transport.blocking.jms.sender:parameter.reply_destination": "transport.blocking.jms.sender:parameter.'transport.jms.ReplyDestination'",
   "transport.blocking.jms.sender:parameter.default_destination_type": "transport.blocking.jms.sender:parameter.'transport.jms.DefaultReplyDestinationType'",
   "transport.blocking.jms.sender:parameter.message_selector": "transport.blocking.jms.sender:parameter.'transport.jms.MessageSelector'",
   "transport.blocking.jms.sender:parameter.subscription_durable": "transport.blocking.jms.sender:parameter.'transport.jms.SubscriptionDurable'",
